# tinyfold

./: .gitignore  README.md  diffusion_analysis_report.md  epsilon_rollout_plan.md  plan_readme.md  pyproject.toml
assets/: showcase_predictions.json  showcase_samples.json
doc/: architecture.md  chirality.md  data_pipeline.md  decoder_redesign.md  diffusion.md  frontend.md  model.md  resfold_design.md  visualization.md  web.md
scripts/: README.md  analyze_residue_distances.py  check_3d_spread.py  check_samples.py  check_std.py  compare_coord_embed.py  compare_iterative_methods.py  data_split.py  debug_af3_output.py  debug_convergence.py  debug_sampling.py  eval_atom_dockq.py  eval_stage1.py  eval_two_stage.py  prepare_data.py  profile_iterfold.py  profile_stage2.py  profile_train.py  profile_train_step.py  script_utils.py  select_coils.py  test_dihedral.py  test_e2e_import.py  test_grad_accum.py  test_iterfold_overfit.py  test_omega_ground_truth.py  test_rotation_bug.py  test_rotation_matrix.py  test_training_step.py  train.py  train_coil_experiment.py  train_iterfold.py  train_resfold.py  train_resfold_e2e_v2.py  train_resfold_iterative.py  train_resfold_stage2.py  train_stage1.py  train_stage2_continuous.py  visualize_diffusion.py  visualize_preds.py  (+1 more)
scripts/archive/: analyze_error_vs_size.py  check_ckpt.py  check_params.py  check_schema.py  debug_3mq7.py  (+17 more)
tests/: conftest.py  test_bucketing.py  test_contact_loss.py  test_data_pipeline.py  test_integration.py  test_model.py  test_viz.py
web/: config.yaml  predict_all.py  server.py
web-light/: server.py
(+149 files in other folders)
